test/interaction/SplitLetBound.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : Bool " nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-info-action "*Error*" "SplitLetBound.agda:4.20-24: error: [Interaction.CaseSplitError] Cannot split on let-bound variable y when checking that the expression ? has type Bool" nil)
((last . 3) . (agda2-maybe-goto '("SplitLetBound.agda" . 67)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
