test/interaction/SplitLetBound.agda
open import Agda.Builtin.Bool

f : Bool → Bool
f x = let y = x in {!!}
